@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-19T16:17:35Z",
-  "count_outdated" : 101,
-  "uniques_outdated" : 31,
+  "timestamp" : "2022-08-23T16:15:44Z",
+  "count_outdated" : 103,
+  "uniques_outdated" : 32,
   "count" : 110,
   "uniques" : 34,
   "views" : [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-16T00:00:00Z",
       "count": 4,
