@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 3,
+  "count": 7,
+  "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-16T00:00:00Z",
       "count": 4,
